# acme.api

./: .dockerignore  .env  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  config.example.yaml  docker-compose.harness.yaml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
acme_api/: __init__.py  admin_clients.py  config.py  db.py  deployer.py  logging.py  main.py  middleware.py  readiness.py  scheduler.py  webhooks.py
acme_api/auth/: __init__.py  bootstrap.py  hash.py  rbac.py
acme_api/backend/: __init__.py  acmesh_backend.py  acmesh_errors.py  acmesh_output.py  dataclasses.py  mock_backend.py  protocol.py
acme_api/models/: __init__.py  api_key.py  base.py  certificate.py  certificate_revocation.py  event.py  renewal_attempt.py  webhook.py
acme_api/routers/: __init__.py  admin_clients.py  certificates.py  config.py  events.py
acme_api/schemas/: __init__.py  api_client.py  certificate.py  config_readonly.py  event.py
acme_api/services/: certificate_contracts.py  certificate_lifecycle_operations.py  certificate_revocations.py  certificate_utilities.py  certificates.py  deployment_generations.py
alembic/: env.py
alembic/versions/: 1de7e7e68b3d_expand_api_key_lookup_hash.py  8760d3a7fed0_initial_schema.py  a7c3e9d2b4f1_add_certificate_revocations.py  c8d4e1f2a6b9_add_revocation_claim_lease.py  cb615e9b9c58_add_api_key_lookup_hash.py  d9f4a1c2b7e3_add_dns_persist_certificate_state.py  e3c8b6a4d1f2_add_held_request_lifecycle.py  f4a9b2c7d6e1_add_certificate_generation_state.py
coverage-data/: coverage.json  coverage.xml
dev/: check_coverage.py  check_per_file_coverage.py  dependencies.py  run_tests.py
docker/: Dockerfile.e2e-test  config.yaml  entrypoint.sh
docs/: future.md  outline.md  plan.md
scripts/: check_forbidden_imports.py  check_max_lines.py
tests/: conftest.py  test_alembic.py  test_api_phase5.py  test_auth_phase4.py  test_backend_commands.py  test_config.py  test_crud.py  test_db.py  test_deployer.py  test_health.py  test_logging.py  test_main.py  test_middleware.py  test_scheduler.py  test_schemas.py  test_webhooks.py
tests/e2e/pebble_harness/: acme.api.test-config.yaml  challtestsrv.env  run_harness.py  test_pebble_e2e.py
tests/fixtures/: sample_config.yaml  sample_dns.env
tests/helpers/: api.py
tests/integration/: test_dns_persist_concurrency.py  test_e2e_lifecycle.py
tests/integration/pebble_harness/: acme.api.test-config.yaml  dns_challtestsrv.sh  docker-compose.test.yml  pebble-config.json  run_harness.py  test_pebble_e2e.py
tests/unit/: test_alembic.py  test_api_phase5.py  test_auth_phase4.py  test_backend_commands.py  test_certificate_revocations.py  test_config.py  test_crud.py  test_db.py  test_deployer.py  test_event_schemas.py  test_generation_cleanup.py  test_held_dns_persist.py  test_logging.py  test_main.py  test_middleware.py  test_scheduler.py  test_schemas.py  test_webhooks.py
