[project]
name = "acme.api"
version = "0.1.0"
description = "Lightweight, self-hosted REST service for managing ACME certificates via DNS-01 validation."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Streaky" }]
requires-python = ">=3.14"
keywords = [
    "acme",
    "certificate",
    "dns-01",
    "letsencrypt",
    "rest-api",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "PyYAML",
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "apscheduler",
    "pydantic-settings",
    "httpx2",
    "prometheus-client",
    "passlib[bcrypt]",
    "aiofiles",
]

[project.urls]
"Homepage" = "https://github.com/streaky/acme.api"
"Source" = "https://github.com/streaky/acme.api"
"Bug Tracker" = "https://github.com/streaky/acme.api/issues"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pylint",
    "types-PyYAML",
    "httpx",
]

[project.scripts]
acme-api = "acme_api.main:main"
[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["acme_api*"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.MASTER]
fail-under = 10.00
load-plugins = []

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "import-outside-toplevel",
    "redefined-outer-name",
    "too-few-public-methods",
    "no-member",
    "unspecified-encoding",
    "duplicate-code",
]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
count = true
statistics = true

[tool.isort]
profile = "black"
src_paths = ["acme_api", "tests"]
known_first_party = ["acme_api"]
[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = []
addopts = [
    "-vvv",
    "--tb=short",
    "--cov-report=term",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.14"
strict = true
