[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acme.api"
version = "0.1.0"
description = "Lightweight, self-hosted REST service for managing ACME certificates via DNS-01 validation."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Streaky" }]
requires-python = ">=3.14"
keywords = [
    "acme",
    "certificate",
    "dns-01",
    "letsencrypt",
    "rest-api",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "alembic",
    "PyYAML",
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "apscheduler",
    "pydantic-settings",
    "httpx2",
    "passlib[bcrypt]",
    "aiofiles",
]

[project.urls]
"Homepage" = "https://github.com/streaky/acme.api"
"Source" = "https://github.com/streaky/acme.api"
"Bug Tracker" = "https://github.com/streaky/acme.api/issues"

[dependency-groups]
dev = [
    "mypy",
    "hatchling",
    "httpx2",
    "pylint",
    "pytest",
    "pytest-cov",
    "ruff",
    "types-PyYAML",
]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.hatch.build.targets.wheel]
packages = ["acme_api"]



[project.scripts]
acme-api = "acme_api.main:main"
[tool.pylint.format]
max-line-length = 120

[tool.pylint.main]
py-version = "3.14"
fail-under = 10.00
load-plugins = []


[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "import-outside-toplevel",
    "redefined-outer-name",
    "too-few-public-methods",
    "no-member",
    "unspecified-encoding",
    "duplicate-code",
]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = []
addopts = [
    "--strict-config",
    "--strict-markers",
    "-p",
    "no:asyncio",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["acme_api"]
omit = ["tests/e2e/pebble_harness/test_pebble_e2e.py"]

[tool.coverage.report]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    # FastAPI declares dependencies and request parameters in function defaults.
    "B008",
    # Existing public API and tests retain their established, behavior-neutral forms.
    "RUF005",
    "RUF022",
    "RUF043",
    "SIM105",
    "SIM108",
    "SIM112",
    "SIM117",
]

[tool.mypy]
python_version = "3.14"
strict = true
